--- a/src/bc01.html
+++ b/src/bc01.html
@@ -153,7 +153,7 @@
 							
 							
 							<!-- project gallery -->
-							<h2>Imágenes de esta cabina</h2>
+							<h2>Im&aacutegenes de esta cabina</h2>
 							<ul class="project-gallery">
                                 <li><a href="img/productos/bc01/1.jpg" class="fancybox"><img src="img/productos/bc01/1mini.jpg" alt="Pic"></a></li>
                                 <li><a href="img/productos/bc01/2.jpg" class="fancybox"><img src="img/productos/bc01/2mini.jpg" alt="Pic"></a></li>
@@ -169,17 +169,17 @@
 						<!--project column (right) -->
 						<div class="project-column">
                             <h1 class="project-title">Descripción:</h1>
-                            <p>Esta cabina está completamente equipada para satisfacer sus necesidades, Sus espejos retrovisores y su iluminación tanto interna
-                             como externa, facilitarán el desempeño de sus tareas.</p>
+                            <p>Esta cabina est&aacute completamente equipada para satisfacer sus necesidades, Sus espejos retrovisores y su iluminación tanto interna
+                             como externa, facilitar&aacuten el desempeño de sus tareas.</p>
 
 							<h1 class="project-title">Detalles:</h1>
-                            <p style="margin-bottom: 5px;"><strong>> </strong>Estructura metálica</p>
+                            <p style="margin-bottom: 5px;"><strong>> </strong>Estructura met&aacutelica</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Techo exterior realizado en P.R.F.V al igual que al frente.</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Vidrios tonalizados y templados</p>
-                            <p style="margin-bottom: 5px;"><strong>> </strong>Parabrisas panorámico curvo</p>
+                            <p style="margin-bottom: 5px;"><strong>> </strong>Parabrisas panor&aacutemico curvo</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Puerta lateral, ventana lateral móvil y luneta fija</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Dos espejos retrovisores en el exterior de la cabina</p>
-                            <p style="margin-bottom: 5px;"><strong>> </strong>Limpiaparabrisas Eléctrico</p>
+                            <p style="margin-bottom: 5px;"><strong>> </strong>Limpiaparabrisas El&eacutectrico</p>
                             <p><strong>> </strong>Luz Interior</p>
 
                             <h1 class="project-title">Medidas:</h1>
@@ -229,7 +229,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
