--- a/src/bounus.html
+++ b/src/bounus.html
@@ -158,7 +158,7 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes de esta cabina</h2>
+                <h2>Im&aacutegenes de esta cabina</h2>
                 <ul class="project-gallery">
                     <li><a href="img/productos/viales/bounus/2big.png" class="fancybox"><img
                             src="img/productos/viales/bounus/2.png" alt="Pic"></a></li>
@@ -177,11 +177,11 @@
             <div class="project-column">
                 <!--<h1 class="project-title">Descripción:</h1>-->
 
-                <p style="margin-bottom: 5px;">Las cabinas para máquinas viales son realizadas de manera exclusiva para nuestros clientes, teniendo
-                    en cuenta las características de la máquina, sobre todo la seguridad como también confort del
+                <p style="margin-bottom: 5px;">Las cabinas para m&aacutequinas viales son realizadas de manera exclusiva para nuestros clientes, teniendo
+                    en cuenta las características de la m&aacutequina, sobre todo la seguridad como tambi&eacuten confort del
                     operador.</p>
 
-                <p style="margin-bottom: 5px;">Permiten ser montadas sobre las máquinas sin necesidad de realizar modificaciones en las mismas,
+                <p style="margin-bottom: 5px;">Permiten ser montadas sobre las m&aacutequinas sin necesidad de realizar modificaciones en las mismas,
                     permitiendo esto, agilidad en el montaje.</p>
 
             </div>
@@ -236,7 +236,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
