--- a/src/contact.html
+++ b/src/contact.html
@@ -161,7 +161,7 @@
                         </div>
 
                         <div>
-                            <label>Teléfono:</label>
+                            <label>Tel&eacutefono:</label>
                             <input name="telefono" class="form-poshytip" id="telefono" type="tel"
                                    placeholder="011-4444-4444"
                                     />
@@ -201,11 +201,11 @@
                 <br/>
                 <small><a
                         href="https://maps.google.com.ar/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=Andonaegui+5676,+Gonz%C3%A1lez+Catan,+Buenos+Aires&amp;aq=0&amp;oq=Andonaegui+5676,+gonza&amp;sll=-38.452918,-63.598921&amp;sspn=40.872649,79.013672&amp;ie=UTF8&amp;hq=&amp;hnear=Andonaegui+5676,+Gonz%C3%A1lez+Catan,+Buenos+Aires&amp;t=m&amp;ll=-34.765589,-58.618197&amp;spn=0.016252,0.01605&amp;z=15&amp;iwloc=A"
-                        style="color:#000000;text-align:center; margin-left: 134px;">Ver más grande</a></small>
+                        style="color:#000000;text-align:center; margin-left: 134px;">Ver m&aacutes grande</a></small>
 
                 <p style="background:#f5f5f5; border-radius: 15px; text-align: center; width: 375px;">Andonaegui
                     5676<br/>
-                    Gonzalez Catán<br/>
+                    Gonzalez Cat&aacuten<br/>
                     Buenos Aires<br/>
                     Argentina<br/>
                     Tel.: [+ 54 2202] 431-260 <br/>
@@ -262,7 +262,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
