--- a/src/cuchas.html
+++ b/src/cuchas.html
@@ -154,7 +154,7 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes de esta cabina</h2>
+                <h2>Im&aacutegenes de esta cabina</h2>
                 <ul class="project-gallery">
                     <li><a href="img/productos/especiales/cuchas/1.png" class="fancybox"><img
                             src="img/productos/especiales/cuchas/1mini.png" alt="Pic"></a></li>
@@ -185,7 +185,7 @@
 
                 <!--<h1 class="project-title">Detalles:</h1>-->
 
-                <p style="margin-bottom: 5px;">Son realizadas en P.R.F.V basándosno en las necesidades de nuestros
+                <p style="margin-bottom: 5px;">Son realizadas en P.R.F.V bas&aacutendosno en las necesidades de nuestros
                     clientes, ofreciendo mayor durabilidad y resistencia, aptas para interior como exterior.</p> <br/>
 
                 <p style="margin-bottom: 5px;">Vibrantes colores y materiales de primer nivel.</p>
@@ -243,7 +243,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
