--- a/src/especial1.html
+++ b/src/especial1.html
@@ -161,7 +161,7 @@
             <div class="project-column">
                 <!--<h1 class="project-title">Descripción:</h1>-->
                 <br/><br/>
-                <p style="margin-bottom: 5px;">En una época de modernismo y tendencias, ofrecemos estos productos, tanto sea para comercios como
+                <p style="margin-bottom: 5px;">En una &eacutepoca de modernismo y tendencias, ofrecemos estos productos, tanto sea para comercios como
                     para su hogar.</p>
 
                 <p style="margin-bottom: 5px;">La mezcla de la calidad y colores, hace que estos sillones se adapten a todos los proyectos.
@@ -221,7 +221,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
