--- a/src/features.html
+++ b/src/features.html
@@ -145,7 +145,7 @@
                 <div class="one-half">
                     <h6 class="line-divider">TecnoPartes</h6> <br/>
 
-                    <p>Tecno partes es una empresa argentina, dedicada al diseño, desarrollo y fabricación de productos realizados en Plástico Reforzado con Fibra de Vidrio, para el abastecimiento de diversos mercados.
+                    <p>Tecno partes es una empresa argentina, dedicada al diseño, desarrollo y fabricación de productos realizados en Pl&aacutestico Reforzado con Fibra de Vidrio, para el abastecimiento de diversos mercados.
                         Con  30 años de trayectoria, la empresa es líder en la fabricación de cabinas y componentes para maquinaria agrícola y vial.
                     </p>
                     <p>
@@ -171,10 +171,10 @@
 
                     <p>
                         Con soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
-                        Tecno Partes es una empresa dinámica que brinda atención personalizada y trabajo en conjunto, tanto a los grandes fabricantes como a los usuarios finales.
+                        Tecno Partes es una empresa din&aacutemica que brinda atención personalizada y trabajo en conjunto, tanto a los grandes fabricantes como a los usuarios finales.
                     </p>
                     <p>
-                        Actualmente la empresa cuenta con una capacidad productiva de más de 3.000 mts2 donde se desarrollan las áreas productiva, técnica y administrativa. Dotada de maquinaria y herramental de primer nivel, abastece un mercado cada vez más exigente con productos de calidad superior.
+                        Actualmente la empresa cuenta con una capacidad productiva de m&aacutes de 3.000 mts2 donde se desarrollan las &aacutereas productiva, t&eacutecnica y administrativa. Dotada de maquinaria y herramental de primer nivel, abastece un mercado cada vez m&aacutes exigente con productos de calidad superior.
                     </p>
                 </div>
                 <div class="clear "></div>
@@ -220,7 +220,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
