--- a/src/holland.html
+++ b/src/holland.html
@@ -157,7 +157,7 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes de esta cabina</h2>
+                <h2>Im&aacutegenes de esta cabina</h2>
                 <ul class="project-gallery">
                     <li><a href="img/productos/holland/1.jpg" class="fancybox"><img
                             src="img/productos/holland/1mini.jpg" alt="Pic"></a></li>
@@ -261,7 +261,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
