--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
                                                                                       alt="Post"/></a>
 
                             <div class="excerpt">
-                                <a href="#" class="header">Modelo de Cabina para máquinas Caterpillar modelo
+                                <a href="#" class="header">Modelo de Cabina para m&aacutequinas Caterpillar modelo
                                     CP533E</a>
 
                             </div>
@@ -287,7 +287,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
