--- a/src/pla_acc.html
+++ b/src/pla_acc.html
@@ -158,7 +158,7 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes de esta cabina</h2>
+                <h2>Im&aacutegenes de esta cabina</h2>
                 <ul class="project-gallery">
 
                     <li><a href="img/productos/accesorios/pla/2.png" class="fancybox"><img src="img/productos/accesorios/pla/2mini.png" alt="Pic"></a></li>
@@ -182,7 +182,7 @@
                 <!--<h1 class="project-title">Descripción:</h1>-->
 
                 <p>Diseñada y producidas exclusivamente para empresas terminales, las cabinas agrícolas son puestas en
-                    producción para selectos fabricantes del mercado argentino, asi como también de otros paises.</p>
+                    producción para selectos fabricantes del mercado argentino, asi como tambi&eacuten de otros paises.</p>
 
                 <!--<h1 class="project-title">Detalles:</h1>-->
 
@@ -235,7 +235,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
