--- a/src/tanque1.html
+++ b/src/tanque1.html
@@ -159,7 +159,7 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes</h2>
+                <h2>Im&aacutegenes</h2>
                 <ul class="project-gallery">
                     <li><a href="img/productos/confort2007/2.jpg" class="fancybox"><img
                             src="img/productos/confort2007/2mini.jpg" alt="Pic"></a></li>
@@ -189,9 +189,9 @@
 
                 <p style="margin-bottom: 5px;">Contamos con tanques de productos, de combustible y de agua. Ofrecemos
                     diversas capacidades de almacenamiento y modelos, realizados según las características de la
-                    máquina.</p> <br/>
+                    m&aacutequina.</p> <br/>
 
-                <p style="margin-bottom: 5px;">Contamos también con una línea de tanques adaptables a las necesidades
+                <p style="margin-bottom: 5px;">Contamos tambi&eacuten con una línea de tanques adaptables a las necesidades
                     diferentes industrias.</p>
 
 
@@ -252,7 +252,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
