--- a/src/containera.html
+++ b/src/containera.html
@@ -157,7 +157,7 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes de esta cabina</h2>
+                <h2>Im&aacutegenes de esta cabina</h2>
                 <ul class="project-gallery">
                     <li><a href="img/productos/viales/containera/2big.png" class="fancybox"><img
                             src="img/productos/viales/containera/2.png" alt="Pic"></a></li>
@@ -177,7 +177,7 @@
                 <!--<h1 class="project-title">Descripción:</h1>-->
 
                 <p>Diseñada y producidas exclusivamente para empresas terminales, las cabinas agrícolas son puestas en
-                    producción para selectos fabricantes del mercado argentino, asi como también de otros paises.</p>
+                    producción para selectos fabricantes del mercado argentino, asi como tambi&eacuten de otros paises.</p>
 
                 <!--<h1 class="project-title">Detalles:</h1>-->
 
@@ -230,7 +230,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
