--- a/src/deere.html
+++ b/src/deere.html
@@ -156,7 +156,7 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes de esta cabina</h2>
+                <h2>Im&aacutegenes de esta cabina</h2>
                 <ul class="project-gallery">
                     <li><a href="img/productos/deere/1.jpg" class="fancybox"><img src="img/productos/deere/1mini.jpg"
                                                                                   alt="Pic"></a></li>
@@ -237,7 +237,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
