--- a/src/desarrollos.html
+++ b/src/desarrollos.html
@@ -154,7 +154,7 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes</h2>
+                <h2>Im&aacutegenes</h2>
                 <ul class="project-gallery">
                     <li><a href="img/productos/especiales/desarrollos/1.png" class="fancybox"><img
                             src="img/productos/especiales/desarrollos/1mini.png" alt="Pic"></a></li>
@@ -207,7 +207,7 @@
 
                 <!--<h1 class="project-title">Detalles:</h1>-->
 
-                <p style="margin-bottom: 5px;">La gran resistencia al uso continuo y a los factores climáticos hacen que
+                <p style="margin-bottom: 5px;">La gran resistencia al uso continuo y a los factores clim&aacuteticos hacen que
                     los juegos, sean ideales para el uso exterior.</p> <br/>
 
 
@@ -252,7 +252,7 @@
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Catán<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
