--- a/src/gallery.html
+++ b/src/gallery.html
@@ -1,7 +1,9 @@
 <!DOCTYPE  html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
     <title>Tecno-Partes</title>
 
     <!-- CSS -->
@@ -141,7 +143,7 @@
                 <li>Filtrar:</li>
                 <li><a href="#" data-filter="*"> Todos </a></li>
                 <li><a href="#" data-filter=".adaptables"> Cab. Adaptables </a></li>
-                <li><a href="#" data-filter=".agricolas"> Cab. Agr√≠colas </a></li>
+                <li><a href="#" data-filter=".agricolas"> Cab. AgrÌcolas </a></li>
                 <li><a href="#" data-filter=".AutoElevadores"> Cab. Auto Elevadores </a></li>
                 <li><a href="#" data-filter=".viales"> Cab. Viales </a></li>
                 <li><a href="#" data-filter=".libre"> Aire Libre / Jardin </a></li>
@@ -291,7 +293,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agr√≠colas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas AgrÌcolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -303,14 +305,14 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 a√±os junto a vos.</p>
+                <p>Mas de 20 aÒos junto a vos.</p>
 
 
             </li>
             <li class="col">
                 <h6>Contacto</h6>
 
-                Andonaegui 5676, Gonzalez Cat√°n<br/>
+                Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
                 Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
                 comercializacion@tecno-partes.com.ar
