fixing tildes problem

--- a/src/breso.html
+++ b/src/breso.html
@@ -136,7 +136,7 @@
 							<span class="title">Modelo de cabina Caiman
 
 							</span>
-                <span class="subtitle">Cabina agrícola.
+                <span class="subtitle">Cabina agr&iacutecola.
                                                      <a href="cab.maquinas.agricolas.pdf" target="_blank"
                                                         style="color: #000000;">Descargar Folleto</a>
 
@@ -176,10 +176,10 @@
 
             <!--project column (right) -->
             <div class="project-column">
-                <!--<h1 class="project-title">Descripción:</h1>-->
+                <!--<h1 class="project-title">Descripci&oacuten:</h1>-->
 
-                <p>Diseñada y producidas exclusivamente para empresas terminales, las cabinas agrícolas son puestas en
-                    producción para selectos fabricantes del mercado argentino, asi como tambi&eacuten de otros paises.</p>
+                <p>Dise&ntildeada y producidas exclusivamente para empresas terminales, las cabinas agr&iacutecolas son puestas en
+                    producci&oacuten para selectos fabricantes del mercado argentino, asi como tambi&eacuten de otros paises.</p>
 
                 <!--<h1 class="project-title">Detalles:</h1>-->
 
@@ -213,7 +213,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -224,7 +224,7 @@
 
             <li class="col">
                 <h6>Tecno-Partes</h6>
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
 
             </li>
