--- a/src/contact.html
+++ b/src/contact.html
@@ -153,9 +153,9 @@
 
                         <div>
 
-                            <label>Compañia:</label>
+                            <label>Compa&ntildeia:</label>
                             <input name="empresa" class="form-poshytip" id="empresa" type="text"
-                                   placeholder="Nombre Compañia"
+                                   placeholder="Nombre Compa&ntildeia"
 
                                    autofocus="autofocus" maxlength="20"/>
                         </div>
@@ -233,7 +233,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -245,7 +245,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
                 <!--<ul>-->
                 <!--<li><a href="#">Somos una empresa</a></li>-->
