--- a/src/gallery.html
+++ b/src/gallery.html
@@ -143,7 +143,7 @@
                 <li>Filtrar:</li>
                 <li><a href="#" data-filter="*"> Todos </a></li>
                 <li><a href="#" data-filter=".adaptables"> Cab. Adaptables </a></li>
-                <li><a href="#" data-filter=".agricolas"> Cab. Agrícolas </a></li>
+                <li><a href="#" data-filter=".agricolas"> Cab. Agr&iacutecolas </a></li>
                 <li><a href="#" data-filter=".AutoElevadores"> Cab. Auto Elevadores </a></li>
                 <li><a href="#" data-filter=".viales"> Cab. Viales </a></li>
                 <li><a href="#" data-filter=".libre"> Aire Libre / Jardin </a></li>
@@ -293,7 +293,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -305,7 +305,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
 
             </li>
