--- a/src/tanques5.html
+++ b/src/tanques5.html
@@ -176,7 +176,7 @@
 
             <!--project column (right) -->
             <div class="project-column">
-                <!--<h1 class="project-title">Descripción:</h1>-->
+                <!--<h1 class="project-title">Descripci&oacuten:</h1>-->
 
                 <p>Los tanques Tecno Partes son realizados bajo estrictas normas de proceso y calidad, lo que garantiza
                     una mayor durabilidad y resistencia.</p>
@@ -184,10 +184,10 @@
                 <!--<h1 class="project-title">Detalles:</h1>-->
 
                 <p style="margin-bottom: 5px;">Contamos con tanques de productos, de combustible y de agua. Ofrecemos
-                    diversas capacidades de almacenamiento y modelos, realizados según las características de la
+                    diversas capacidades de almacenamiento y modelos, realizados seg&uacuten las caracter&iacutesticas de la
                     m&aacutequina.</p> <br/>
 
-                <p style="margin-bottom: 5px;">Contamos tambi&eacuten con una línea de tanques adaptables a las necesidades
+                <p style="margin-bottom: 5px;">Contamos tambi&eacuten con una l&iacutenea de tanques adaptables a las necesidades
                     diferentes industrias.</p>
 
 
@@ -214,7 +214,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -226,7 +226,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
 
             </li>
