--- a/src/bc01.html
+++ b/src/bc01.html
@@ -133,7 +133,7 @@
 						<!-- title -->
 						<div id="page-title">
 							<span class="title">Cabina Modelo BC01</span>
-							<span class="subtitle">Cabina agrícola.
+							<span class="subtitle">Cabina agr&iacutecola.
                             <a href="bc01.pdf" target="_blank" style="color: #000000;">Descargar Folleto</a>
                             </span>
 						</div>
@@ -168,16 +168,16 @@
 
 						<!--project column (right) -->
 						<div class="project-column">
-                            <h1 class="project-title">Descripción:</h1>
-                            <p>Esta cabina est&aacute completamente equipada para satisfacer sus necesidades, Sus espejos retrovisores y su iluminación tanto interna
-                             como externa, facilitar&aacuten el desempeño de sus tareas.</p>
+                            <h1 class="project-title">Descripci&oacuten:</h1>
+                            <p>Esta cabina est&aacute completamente equipada para satisfacer sus necesidades, Sus espejos retrovisores y su iluminaci&oacuten tanto interna
+                             como externa, facilitar&aacuten el desempe&ntildeo de sus tareas.</p>
 
 							<h1 class="project-title">Detalles:</h1>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Estructura met&aacutelica</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Techo exterior realizado en P.R.F.V al igual que al frente.</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Vidrios tonalizados y templados</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Parabrisas panor&aacutemico curvo</p>
-                            <p style="margin-bottom: 5px;"><strong>> </strong>Puerta lateral, ventana lateral móvil y luneta fija</p>
+                            <p style="margin-bottom: 5px;"><strong>> </strong>Puerta lateral, ventana lateral m&oacutevil y luneta fija</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Dos espejos retrovisores en el exterior de la cabina</p>
                             <p style="margin-bottom: 5px;"><strong>> </strong>Limpiaparabrisas El&eacutectrico</p>
                             <p><strong>> </strong>Luz Interior</p>
@@ -210,7 +210,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -222,7 +222,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
 
             </li>
