--- a/src/cat.html
+++ b/src/cat.html
@@ -175,10 +175,10 @@
 
             <!--project column (right) -->
             <div class="project-column">
-                <!--<h1 class="project-title">Descripción:</h1>-->
+                <!--<h1 class="project-title">Descripci&oacuten:</h1>-->
 
                 <p style="margin-bottom: 5px;">Las cabinas para m&aacutequinas viales son realizadas de manera exclusiva para nuestros clientes, teniendo
-                    en cuenta las características de la m&aacutequina, sobre todo la seguridad como tambi&eacuten confort del
+                    en cuenta las caracter&iacutesticas de la m&aacutequina, sobre todo la seguridad como tambi&eacuten confort del
                     operador.</p>
 
                 <p style="margin-bottom: 5px;">Permiten ser montadas sobre las m&aacutequinas sin necesidad de realizar modificaciones en las mismas,
@@ -207,7 +207,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -219,7 +219,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
             </li>
             <li class="col">
