--- a/src/desarrollos.html
+++ b/src/desarrollos.html
@@ -198,7 +198,7 @@
 
             <!--project column (right) -->
             <div class="project-column">
-                <!--<h1 class="project-title">Descripción:</h1>-->
+                <!--<h1 class="project-title">Descripci&oacuten:</h1>-->
 
                 <p>Nuestras modernas instalaciones y maquinarias, junto a personal altamente capacitado, permiten que
                     podamos realizar todo aquello que los poseedores de proyecto deciden realizar en P.R.F.V
@@ -234,7 +234,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -246,7 +246,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
             </li>
             <li class="col">
