--- a/src/especial2.html
+++ b/src/especial2.html
@@ -159,7 +159,7 @@
 
             <!--project column (right) -->
             <div class="project-column">
-                <!--<h1 class="project-title">Descripción:</h1>-->
+                <!--<h1 class="project-title">Descripci&oacuten:</h1>-->
                 <br/><br/>
                 <p style="margin-bottom: 5px;">En una &eacutepoca de modernismo y tendencias, ofrecemos estos productos, tanto sea para comercios como
                     para su hogar.</p>
@@ -192,7 +192,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="features.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="blog.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -204,7 +204,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
                 <!--<li><a href="#">Somos una empresa</a></li>-->
                 <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
