--- a/src/features.html
+++ b/src/features.html
@@ -145,11 +145,11 @@
                 <div class="one-half">
                     <h6 class="line-divider">TecnoPartes</h6> <br/>
 
-                    <p>Tecno partes es una empresa argentina, dedicada al diseño, desarrollo y fabricación de productos realizados en Pl&aacutestico Reforzado con Fibra de Vidrio, para el abastecimiento de diversos mercados.
-                        Con  30 años de trayectoria, la empresa es líder en la fabricación de cabinas y componentes para maquinaria agrícola y vial.
+                    <p>Tecno partes es una empresa argentina, dedicada al dise&ntildeo, desarrollo y fabricaci&oacuten de productos realizados en Pl&aacutestico Reforzado con Fibra de Vidrio, para el abastecimiento de diversos mercados.
+                        Con  30 a&ntildeos de trayectoria, la empresa es l&iacuteder en la fabricaci&oacuten de cabinas y componentes para maquinaria agr&iacutecola y vial.
                     </p>
                     <p>
-                    Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera constante, acompañando a nuestros clientes en el desarrollo de sus proyectos.
+                    Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera constante, acompa&ntildeando a nuestros clientes en el desarrollo de sus proyectos.
                     </p>
 
 
@@ -170,8 +170,8 @@
                     <!--<h6 class="line-divider">Nuestro trabajo</h6>-->
 
                     <p>
-                        Con soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
-                        Tecno Partes es una empresa din&aacutemica que brinda atención personalizada y trabajo en conjunto, tanto a los grandes fabricantes como a los usuarios finales.
+                        Con soluciones &uacutenicas y creativas que le aporten valor a las necesidades de sus Clientes,
+                        Tecno Partes es una empresa din&aacutemica que brinda atenci&oacuten personalizada y trabajo en conjunto, tanto a los grandes fabricantes como a los usuarios finales.
                     </p>
                     <p>
                         Actualmente la empresa cuenta con una capacidad productiva de m&aacutes de 3.000 mts2 donde se desarrollan las &aacutereas productiva, t&eacutecnica y administrativa. Dotada de maquinaria y herramental de primer nivel, abastece un mercado cada vez m&aacutes exigente con productos de calidad superior.
@@ -202,7 +202,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -213,7 +213,7 @@
 
             <li class="col">
                 <h6>Tecno-Partes</h6>
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
 
             </li>
