--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
                                     alt="Post"/></a>
 
                             <div class="excerpt">
-                                <div class="header">Estos son algunos de los cllientes que confían en
+                                <div class="header">Estos son algunos de los cllientes que conf&iacutean en
                                     nosotros.</div>
 
                             </div>
@@ -268,7 +268,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -280,7 +280,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
 
             </li>
