--- a/src/juegos.html
+++ b/src/juegos.html
@@ -194,10 +194,10 @@
 
             <!--project column (right) -->
             <div class="project-column">
-                <!--<h1 class="project-title">Descripción:</h1>-->
+                <!--<h1 class="project-title">Descripci&oacuten:</h1>-->
 
-                <p>Divertidos y resistentes juegos para chicos, realizados íntegramente en P.R.F.V con diseños únicos
-                    que garantizan la seguridad para los mas grandes y la diversión para los mas chicos.</p>
+                <p>Divertidos y resistentes juegos para chicos, realizados &iacutentegramente en P.R.F.V con dise&ntildeos &uacutenicos
+                    que garantizan la seguridad para los mas grandes y la diversi&oacuten para los mas chicos.</p>
 
                 <!--<h1 class="project-title">Detalles:</h1>-->
 
@@ -229,7 +229,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -241,7 +241,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
 
             </li>
