--- a/src/valtra.html
+++ b/src/valtra.html
@@ -172,7 +172,7 @@
 
 
             <div class="project-column">
-                <h1 class="project-title">Descripción:</h1>
+                <h1 class="project-title">Descripci&oacuten:</h1>
 
                 <p>Contamos con una exclusiva linea para AutoElevadores,las cuales son realizadas siguiendo los lineamientos
                     y calidad de las cabinas originales.
@@ -217,7 +217,7 @@
                 <h6>Productos</h6>
                 <ul>
                     <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agr&iacutecolas</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas AutoElevadores</a></li>
                     <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
@@ -229,7 +229,7 @@
             <li class="col">
                 <h6>Tecno-Partes</h6>
 
-                <p>Mas de 20 años junto a vos.</p>
+                <p>Mas de 20 a&ntildeos junto a vos.</p>
 
 
             </li>
