Changes tecnopartes after entrega

--- a/src/contact.html
+++ b/src/contact.html
@@ -107,10 +107,10 @@
         <div class="wrapper">
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
-                <li><a href="index.html">Principal</a></li>
-                <li><a href="features.html">La Empresa</a></li>
-                <li><a href="gallery.html">Productos</a></li>
-                <li class="current-menu-item"><a href="contact.html">Contacto</a></li>
+                <li><a href="index.html">PRINCIPAL</a></li>
+                <li><a href="features.html">LA EMPRESA</a></li>
+                <li><a href="gallery.html">PRODUCTOS</a></li>
+                <li class="current-menu-item"><a href="contact.html">CONTACTO</a></li>
             </ul>
             <!-- Navigation -->
         </div>
@@ -208,8 +208,8 @@
                     Gonzalez Cat&aacuten<br/>
                     Buenos Aires<br/>
                     Argentina<br/>
-                    Tel.: [+ 54 2202] 431-260 <br/>
-                    Fax: [+ 54 2202] 434-104 <br> <br/>
+                    Tel.: 02202 431 260<br/>
+                    Fax: 02202 434 104<br> <br/>
                     comercializacion@tecno-partes.com.ar</p>
                 <!-- ENDS content -->
             </div>
@@ -264,7 +264,7 @@
 
                 Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
-                Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
+                Tel.: 02202 431 260<br>Fax: 02202 434 104<br>
                 comercializacion@tecno-partes.com.ar
             </li>
 
@@ -287,8 +287,7 @@
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
             <li><a href="http://www.twitter.com" class="poshytip twitter" title="Seguinos en twitter"></a></li>
-            <li><a href="http://www.youtube.com" class="poshytip youtube" title="Vea nuestros videos"></a></li>
-        </ul>
+                     </ul>
         <!-- ENDS Social -->
         <div id="to-top" class="poshytip" title="To top"></div>
     </div>
