--- a/src/features.html
+++ b/src/features.html
@@ -107,12 +107,12 @@
         <div class="wrapper">
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
-                <li><a href="index.html">Principal</a></li>
-                <li class="current-menu-item"><a href="features.html">La Empresa</a>
+                <li><a href="index.html">PRINCIPAL</a></li>
+                <li class="current-menu-item"><a href="features.html">LA EMPRESA</a>
 
                 </li>
-                <li><a href="gallery.html">Productos</a></li>
-                <li><a href="contact.html">Contacto</a></li>
+                <li><a href="gallery.html">PRODUCTOS</a></li>
+                <li><a href="contact.html">CONTACTO</a></li>
             </ul>
             <!-- Navigation -->
         </div>
@@ -134,7 +134,7 @@
 
             <!-- title -->
             <div id="page-title">
-                <span class="title">La empresa</span>
+                <span class="title">TecnoPartes</span>
             </div>
             <!-- ENDS title -->
 
@@ -143,7 +143,7 @@
 
                 <!-- 2 cols -->
                 <div class="one-half">
-                    <h6 class="line-divider">TecnoPartes</h6> <br/>
+                   <br/>
 
                     <p>Tecno partes es una empresa argentina, dedicada al dise&ntildeo, desarrollo y fabricaci&oacuten de productos realizados en Pl&aacutestico Reforzado con Fibra de Vidrio, para el abastecimiento de diversos mercados.
                         Con  30 a&ntildeos de trayectoria, la empresa es l&iacuteder en la fabricaci&oacuten de cabinas y componentes para maquinaria agr&iacutecola y vial.
@@ -222,7 +222,7 @@
 
                 Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
-                Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
+                Tel.: 02202 431 260<br>Fax: 02202 434 104<br>
                 comercializacion@tecno-partes.com.ar
             </li>
 
@@ -244,8 +244,7 @@
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
             <li><a href="http://www.twitter.com" class="poshytip twitter" title="Seguinos en twitter"></a></li>
-            <li><a href="http://www.youtube.com" class="poshytip youtube" title="Vea nuestros videos"></a></li>
-        </ul>
+                     </ul>
         <!-- ENDS Social -->
         <div id="to-top" class="poshytip" title="To top"></div>
     </div>
