--- a/src/index.html
+++ b/src/index.html
@@ -107,10 +107,10 @@
         <div class="wrapper">
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
-                <li class="current-menu-item"><a href="index.html">Principal</a></li>
-                <li><a href="features.html">La Empresa</a></li>
-                <li><a href="gallery.html">Productos</a></li>
-                <li><a href="contact.html">Contacto</a></li>
+                <li class="current-menu-item"><a href="index.html">PRINCIPAL</a></li>
+                <li><a href="features.html">LA EMPRESA</a></li>
+                <li><a href="gallery.html">PRODUCTOS</a></li>
+                <li><a href="contact.html">CONTACTO</a></li>
             </ul>
             <!-- Navigation -->
         </div>
@@ -137,125 +137,125 @@
 <!-- ENDS Slider -->
 
 <!-- MAIN -->
-<div id="main">
-    <!-- wrapper-main -->
-    <div class="wrapper">
+<!--<div id="main">-->
+    <!--&lt;!&ndash; wrapper-main &ndash;&gt;-->
+    <!--<div class="wrapper">-->
 
-        <!-- headline -->
-        <div class="clear"></div>
-        <!--<div id="headline">-->
-        <!--<span class="main">Ultimos Modelos</span>-->
+        <!--&lt;!&ndash; headline &ndash;&gt;-->
+        <!--<div class="clear"></div>-->
+        <!--&lt;!&ndash;<div id="headline">&ndash;&gt;-->
+        <!--&lt;!&ndash;<span class="main">Ultimos Modelos</span>&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--&lt;!&ndash; ENDS headline &ndash;&gt;-->
+
+        <!--&lt;!&ndash; content &ndash;&gt;-->
+        <!--<div id="content">-->
+
+            <!--&lt;!&ndash; TABS &ndash;&gt;-->
+            <!--&lt;!&ndash; the tabs &ndash;&gt;-->
+            <!--<h2>Ultimos Modelos</h2>-->
+            <!--<ul class="tabs">-->
+                <!--<li><a href="#"></a></li>-->
+            <!--</ul>-->
+
+            <!--&lt;!&ndash; tab "panes" &ndash;&gt;-->
+            <!--<div class="panes">-->
+
+                <!--&lt;!&ndash; Posts &ndash;&gt;-->
+                <!--<div>-->
+                    <!--<ul class="blocks-thumbs thumbs-rollover">-->
+                        <!--<li>-->
+                            <!--<a href="single.html" class="thumb" title="An image"><img src="img/dummies/recent1.png"-->
+                                                                                      <!--alt="Post"/></a>-->
+
+                            <!--<div class="excerpt">-->
+                                <!--<a href="#" class="header">Modelo de Cabina para m&aacutequinas Caterpillar modelo-->
+                                    <!--CP533E</a>-->
+
+                            <!--</div>-->
+                            <!--<a href="caterpillar.html" class="link-button"><span>Leer Mas &#8594;</span></a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a href="#" class="thumb" title="An image"><img src="img/dummies/recent2.png"-->
+                                                                            <!--alt="Post"/></a>-->
+
+                            <!--<div class="excerpt"><br/>-->
+                                <!--<a href="#" class="header">Nueva cabina para autos BOBCAT 2200 4x4</a>-->
+
+                            <!--</div>-->
+                            <!--<a href="bobcat.html" class="link-button"><span>Leer Mas &#8594;</span></a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a href="#" class="thumb" title="An image"><img-->
+                                    <!--src="img/dummies/clientesTP.png"-->
+                                    <!--alt="Post"/></a>-->
+
+                            <!--<div class="excerpt">-->
+                                <!--<div class="header">Estos son algunos de los cllientes que conf&iacutean en-->
+                                    <!--nosotros.</div>-->
+
+                            <!--</div>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+                <!--&lt;!&ndash; ENDS posts &ndash;&gt;-->
+
+                <!--&lt;!&ndash; Posts &ndash;&gt;-->
+                <!--<div>-->
+                    <!--<ul class="blocks-thumbs thumbs-rollover">-->
+                        <!--<li>-->
+                            <!--<a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"-->
+                                                                                      <!--alt="Post"/></a>-->
+
+                            <!--<div class="excerpt">-->
+                                <!--<a href="single.html" class="header">Lorem ipsum dolor</a>-->
+                                <!--Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis-->
+                                <!--egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.-->
+                                <!--Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris-->
+                                <!--placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.-->
+                            <!--</div>-->
+                            <!--<a href="single.html" class="link-button"><span>Read more &#8594;</span></a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"-->
+                                                                                      <!--alt="Post"/></a>-->
+
+                            <!--<div class="excerpt">-->
+                                <!--<a href="single.html" class="header">Lorem ipsum dolor</a>-->
+                                <!--Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis-->
+                                <!--egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.-->
+                                <!--Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris-->
+                                <!--placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.-->
+                            <!--</div>-->
+                            <!--<a href="single.html" class="link-button"><span>Read more &#8594;</span></a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"-->
+                                                                                      <!--alt="Post"/></a>-->
+
+                            <!--<div class="excerpt">-->
+                                <!--<a href="single.html" class="header">Lorem ipsum dolor</a>-->
+                                <!--Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis-->
+                                <!--egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.-->
+                                <!--Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris-->
+                                <!--placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.-->
+                            <!--</div>-->
+                            <!--<a href="single.html" class="link-button"><span>Read more &#8594;</span></a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+                <!--&lt;!&ndash; ENDS posts &ndash;&gt;-->
+
+
+            <!--</div>-->
+            <!--&lt;!&ndash; ENDS TABS &ndash;&gt;-->
+
+
         <!--</div>-->
-        <!-- ENDS headline -->
-
-        <!-- content -->
-        <div id="content">
-
-            <!-- TABS -->
-            <!-- the tabs -->
-            <h2>Ultimos Modelos</h2>
-            <ul class="tabs">
-                <li><a href="#"></a></li>
-            </ul>
-
-            <!-- tab "panes" -->
-            <div class="panes">
-
-                <!-- Posts -->
-                <div>
-                    <ul class="blocks-thumbs thumbs-rollover">
-                        <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/recent1.png"
-                                                                                      alt="Post"/></a>
-
-                            <div class="excerpt">
-                                <a href="#" class="header">Modelo de Cabina para m&aacutequinas Caterpillar modelo
-                                    CP533E</a>
-
-                            </div>
-                            <a href="caterpillar.html" class="link-button"><span>Leer Mas &#8594;</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="thumb" title="An image"><img src="img/dummies/recent2.png"
-                                                                            alt="Post"/></a>
-
-                            <div class="excerpt"><br/>
-                                <a href="#" class="header">Nueva cabina para autos BOBCAT 2200 4x4</a>
-
-                            </div>
-                            <a href="bobcat.html" class="link-button"><span>Leer Mas &#8594;</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="thumb" title="An image"><img
-                                    src="img/dummies/clientesTP.png"
-                                    alt="Post"/></a>
-
-                            <div class="excerpt">
-                                <div class="header">Estos son algunos de los cllientes que conf&iacutean en
-                                    nosotros.</div>
-
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <!-- ENDS posts -->
-
-                <!-- Posts -->
-                <div>
-                    <ul class="blocks-thumbs thumbs-rollover">
-                        <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"
-                                                                                      alt="Post"/></a>
-
-                            <div class="excerpt">
-                                <a href="single.html" class="header">Lorem ipsum dolor</a>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
-                                Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                                placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-                            </div>
-                            <a href="single.html" class="link-button"><span>Read more &#8594;</span></a>
-                        </li>
-                        <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"
-                                                                                      alt="Post"/></a>
-
-                            <div class="excerpt">
-                                <a href="single.html" class="header">Lorem ipsum dolor</a>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
-                                Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                                placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-                            </div>
-                            <a href="single.html" class="link-button"><span>Read more &#8594;</span></a>
-                        </li>
-                        <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"
-                                                                                      alt="Post"/></a>
-
-                            <div class="excerpt">
-                                <a href="single.html" class="header">Lorem ipsum dolor</a>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
-                                Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                                placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-                            </div>
-                            <a href="single.html" class="link-button"><span>Read more &#8594;</span></a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- ENDS posts -->
-
-
-            </div>
-            <!-- ENDS TABS -->
-
-
-        </div>
-        <!-- ENDS content -->
-    </div>
-    <!-- ENDS wrapper-main -->
-</div>
+        <!--&lt;!&ndash; ENDS content &ndash;&gt;-->
+    <!--</div>-->
+    <!--&lt;!&ndash; ENDS wrapper-main &ndash;&gt;-->
+<!--</div>-->
 <!-- ENDS MAIN -->
 
 <!-- FOOTER -->
@@ -289,7 +289,7 @@
 
                 Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
-                Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
+                Tel.: 02202 431 260<br>Fax: 02202 434 104<br>
                 comercializacion@tecno-partes.com.ar
             </li>
 
@@ -311,8 +311,7 @@
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
             <li><a href="http://www.twitter.com" class="poshytip twitter" title="Seguinos en twitter"></a></li>
-            <li><a href="http://www.youtube.com" class="poshytip youtube" title="Vea nuestros videos"></a></li>
-        </ul>
+                     </ul>
         <!-- ENDS Social -->
         <div id="to-top" class="poshytip" title="To top"></div>
     </div>
