--- a/src/tanques4.html
+++ b/src/tanques4.html
@@ -107,12 +107,12 @@
         <div class="wrapper">
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
-                <li><a href="index.html">Principal</a></li>
-                <li><a href="features.html">La Empresa</a>
+                <li><a href="index.html">PRINCIPAL</a></li>
+                <li><a href="features.html">LA EMPRESA</a>
 
                 </li>
-                <li class="current-menu-item"><a href="gallery.html">Productos</a></li>
-                                 <li><a href="contact.html">Contacto</a></li>
+                <li class="current-menu-item"><a href="gallery.html">PRODUCTOS</a></li>
+                                 <li><a href="contact.html">CONTACTO</a></li>
             </ul>
             <!-- Navigation -->
         </div>
@@ -234,7 +234,7 @@
 
                 Andonaegui 5676, Gonzalez Cat&aacuten<br/>
                 Buenos Aires, Argentina<br/>
-                Tel.: [+ 54 2202] 431-260 <br>Fax: [+ 54 2202] 434-104 <br>
+                Tel.: 02202 431 260<br>Fax: 02202 434 104<br>
                 comercializacion@tecno-partes.com.ar
             </li>
 
@@ -256,8 +256,7 @@
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
             <li><a href="http://www.twitter.com" class="poshytip twitter" title="Seguinos en twitter"></a></li>
-            <li><a href="http://www.youtube.com" class="poshytip youtube" title="Vea nuestros videos"></a></li>
-        </ul>
+                     </ul>
         <!-- ENDS Social -->
         <div id="to-top" class="poshytip" title="To top"></div>
     </div>
