--- a/src/index.html
+++ b/src/index.html
@@ -125,10 +125,10 @@
 <div id="slider-block">
     <div id="slider-holder">
         <div id="slider">
-            <a href="http://tecno-partes.com.ar/"><img src="images/slide1.png"
-                                                       title="Bienvenidos!!"
+            <a href="http://tecno-partes.com.ar/"><img src="images/Slide1.png"
+                                                       title="Bienvenidos"
                                                        alt=""/></a>
-            <a href="contact.html"><img src="images/slide2.png"
+            <a href="contact.html"><img src="images/Slide2.png"
                                         title="Contactanos"
                                         alt=""/></a>
         </div>
