--- a/src/index.html
+++ b/src/index.html
@@ -125,11 +125,19 @@
 <div id="slider-block">
     <div id="slider-holder">
         <div id="slider">
-            <a href="http://tecno-partes.com.ar/"><img src="images/Slide1.png"
-                                                       title="Bienvenidos"
+            <a><img src="images/Slide1.png"
+                                                       title=""
                                                        alt=""/></a>
-            <a href="contact.html"><img src="images/Slide2.png"
-                                        title="Contactanos"
+            <a><img src="images/Slide2.png"
+                                        title=""
+                                        alt=""/></a>
+
+            <a><img src="images/Slide3.png"
+                                        title=""
+                                        alt=""/></a>
+
+            <a><img src="images/Slide4.png"
+                                        title=""
                                         alt=""/></a>
         </div>
     </div>
